Fixed navigation and copyright issues

--- a/godsofearth.html
+++ b/godsofearth.html
@@ -12,6 +12,9 @@
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    
+    <!-- Font-Awesome CSS -->
+    <link href="css/font-awesome.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="css/modern-business.css" rel="stylesheet">
@@ -38,12 +41,19 @@
                 Portfolio
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-               <a class="dropdown-item" href="portfolio-digital.html">Digital Games</a>
+                <a class="dropdown-item" href="portfolio-digital.html">Digital Games</a>
                 <a class="dropdown-item" href="portfolio-tabletop.html">Tabletop Games</a>
               </div>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+                 <li>
+               <a href= "https://github.com/abernardo97" class="btn btn-social-icon btn-github">
+                  <span class="fa fa-github"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/alexiabernardo/" class="btn btn-social-icon btn-linkedin">
+                  <span class="fa fa-linkedin"></span>
+                </a>
             </li>
           </ul>
         </div>
@@ -132,7 +142,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; alexiabernardo.me 2017</p>
+        <p class="m-0 text-center text-white">Copyright &copy;2017</p>
       </div>
       <!-- /.container -->
     </footer>
