--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; alexiabernardo.me 2017</p>       
+        <p class="m-0 text-center text-white">Copyright &copy;2017</p>      
       </div>
       <!-- /.container -->
     </footer>
