--- a/portfolio-digital.html
+++ b/portfolio-digital.html
@@ -48,7 +48,7 @@
                 Portfolio
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-               <a class="dropdown-item" href="portfolio-digital.html">Digital Games</a>
+                <a class="dropdown-item" href="portfolio-digital.html">Digital Games</a>
                 <a class="dropdown-item" href="portfolio-tabletop.html">Tabletop Games</a>
               </div>
             </li>
@@ -181,7 +181,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; alexiabernardo.me 2017</p>
+        <p class="m-0 text-center text-white">Copyright &copy;2017</p>
       </div>
       <!-- /.container -->
     </footer>
