--- a/firefightingfoxfinders.html
+++ b/firefightingfoxfinders.html
@@ -15,7 +15,7 @@
     <meta name="revisit-after" content="3 days">
     <meta name="author" content="Alexia Bernardo">
 
-    <title>Firefighter Fox Finders</title>
+    <title>Firefighting Fox Finders</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -72,7 +72,7 @@
     <div class="container">
 
       <!-- Page Heading/Breadcrumbs -->
-      <h1 class="mt-4 mb-3">Firefighter Fox Finders
+      <h1 class="mt-4 mb-3">Firefighting Fox Finders
         <small>Oct 2017</small>
             <a class="btn btn-primary" href="https://github.com/sel6606/HeroJam_Fall2017">View Project
             <span class="glyphicon glyphicon-chevron-right"></span></a>
@@ -90,7 +90,7 @@
 
         <div class="col-md-4">
           <h3 class="my-3">Project Description</h3>
-          <p>Firefighter Fox Finders is a first person game that was developed in Unity in C#.</p>
+          <p>Firefighting Fox Finders is a first person game that was developed in Unity in C#.</p>
           <p>The forest is on fire! Foxes are scattered throughout the forest in need of your help. Carefully maneuver around the fire to pick up the foxes to save them. Dont worry - you can put out the fires for a short time.</p>
           <h3 class="my-3">Project Details</h3>
           <ul>
