--- a/portfolio-digital.html
+++ b/portfolio-digital.html
@@ -100,12 +100,12 @@
       <!-- Project Two -->
       <div class="row">
         <div class="col-md-7">
-          <a href="firefighterfoxfinders.html">
+          <a href="firefightingfoxfinders.html">
             <img class="img-fluid rounded mb-3 mb-md-0" src="media/FFFImage.png" alt="Firefighter Fox Finders">
           </a>
         </div>
         <div class="col-md-5">
-          <h3>Firefighter Fox Finders</h3>
+          <h3>Firefighting Fox Finders</h3>
           <p>The forest is on fire! Foxes are scattered throughout the forest in need of your help. Carefully maneuver around the fire to pick up the foxes to save them. Dont worry - you can put out the fires for a short time.</p>
           <a class="btn btn-primary" href="firefighterfoxfinders.html">View Project
             <span class="glyphicon glyphicon-chevron-right"></span>
