--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
           <!-- Slide Two - Set the background image for this slide in the line below -->
           <div class="carousel-item" style="background-image: url(media/FFFGiantImage.png)">
             <div class="carousel-caption d-none d-md-block">
-              <h3>Firefighter Fox Finders</h3>
-              <p>Firefighter Fox Finders is a first person game that was developed in Unity in C#.</p>
+              <h3>Firefighting Fox Finders</h3>
+              <p>Firefighting Fox Finders is a first person game that was developed in Unity in C#.</p>
             </div>
           </div>
           <!-- Slide Three - Set the background image for this slide in the line below -->
@@ -133,7 +133,7 @@
             <a href="firefighterfoxfinders.html"><img class="card-img-top" src="media/FFFMiniImage.png" alt="Firefighter Fox Finders"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="firefighterfoxfinders.html">Firefighter Fox Finders</a>
+                <a href="firefightingfoxfinders.html">Firefighting Fox Finders</a>
               </h4>
               <p class="card-text">The forest is on fire! Foxes are scattered throughout the forest in need of your help. Carefully maneuver around the fire to pick up the foxes to save them. Dont worry - you can put out the fires for a short time.</p>
             </div>
