--- a/firefightingfoxfinders.html
+++ b/firefightingfoxfinders.html
@@ -84,7 +84,7 @@
       <div class="row">
 
         <div class="col-md-8">
-          <img class="img-fluid" src="media/FFFNormal.png" alt="Firefighter Fox Finders">
+          <img class="img-fluid" src="media/FFFNormal.png" alt="Firefighting Fox Finders">
             
         </div>
 
