--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="firefightingfoxfinders.html"><img class="card-img-top" src="media/FFFMiniImage.png" alt="Firefighter Fox Finders"></a>
+            <a href="firefightingfoxfinders.html"><img class="card-img-top" src="media/FFFMiniImage.png" alt="Firefighting Fox Finders"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="firefightingfoxfinders.html">Firefighting Fox Finders</a>
