Updated resume, meta tags, and copyright

--- a/conspiracy.html
+++ b/conspiracy.html
@@ -4,9 +4,15 @@
   <head>
 
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="title" content="Alexia Bernardo Personal Portfolio">
+    <meta name="description" content="Hi, I'm Alexia Bernardo and I'm a game designer and developer. I enjoy working on multidisciplinary projects.">
+    <meta name="keywords" content="game design, game development, game programming, software development, gameplay programming, level design, project management, casual games">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="3 days">
+    <meta name="author" content="Alexia Bernardo">
 
     <title>Conspiracy</title>
 
@@ -103,40 +109,6 @@
         </div>
 
       </div>
-      <!-- /.row -->
-
-      <!-- Related Projects Row -->
-      
-      <!--<h3 class="my-4">Images</h3>
-
-      <div class="row">
-
-        <div class="col-md-3 col-sm-6 mb-4">
-          <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-          </a>
-        </div>
-
-        <div class="col-md-3 col-sm-6 mb-4">
-          <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-          </a>
-        </div>
-
-        <div class="col-md-3 col-sm-6 mb-4">
-          <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-          </a>
-        </div>
-
-        <div class="col-md-3 col-sm-6 mb-4">
-          <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-          </a>
-        </div>
-
-      </div>
-      <!-- /.row -->
         
         <hr>
 
@@ -146,7 +118,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; 2017</p>
+        <p class="m-0 text-center text-white">Copyright &copy; 2018</p>
       </div>
       <!-- /.container -->
     </footer>
