--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="title" content="Alexia Bernardo Personal Portfolio">
     <meta name="description" content="Hi, I'm Alexia Bernardo and I'm a game designer and developer. I enjoy working on multidisciplinary projects.">
     <meta name="keywords" content="game design, game development, game programming, software development, gameplay programming, level design, project management, casual games">
-    <meta name="robots" content="noindex, nofollow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
     <meta name="revisit-after" content="3 days">
@@ -158,7 +157,7 @@
       <!-- Call to Action Section -->
       <div class="row mb-4">
         <div class="col-md-8">
-          <p>I'm interested in a cooperative education position in the design, development, and testing of software products. Available January 2018 - August 2018</p>
+          <p>I'm interested in a full time position in the design and development of software products. Available June 2019</p>
         </div> 
         <div class="col-md-4">
           <a class="btn btn-lg btn-secondary btn-block" href="media/AlexiaBernardoResume.pdf">Download Resume</a>
@@ -171,7 +170,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; 2017</p>      
+        <p class="m-0 text-center text-white">Copyright &copy; 2018</p>      
       </div>
       <!-- /.container -->
     </footer>
