forgot to add a link

--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@
               <p class="card-text">1st Runner Up</p>
             </div>
             <div class="card-footer">
-              <a href="#">Game Demo</a>
+              <a href="https://www.youtube.com/watch?v=e5NQ7izJcRU">Game Demo</a>
             </div>
           </div>
         </div>
