--- a/helloworld.html
+++ b/helloworld.html
@@ -52,8 +52,9 @@
                 Portfolio
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-               <a class="dropdown-item" href="portfolio-digital.html">Digital Games</a>
+                <a class="dropdown-item" href="portfolio-digital.html">Digital Games</a>
                 <a class="dropdown-item" href="portfolio-tabletop.html">Tabletop Games</a>
+                <a class="dropdown-item" href="portfolio-americangreetings.html">AG Internship</a>
               </div>
             </li>
                  <li>
