typo on the ag portfolio page

--- a/portfolio-americangreetings.html
+++ b/portfolio-americangreetings.html
@@ -130,7 +130,7 @@
         </div>
         <div class="col-md-5">
           <h3>Humdinger</h3>
-          <p>An AG Intern Hackday project where we expand a line of Papyrus cards with an AR experience.</p>
+          <p>An AG Interactive Intern Hackday project where we expand a line of Papyrus cards with an AR experience.</p>
           <a class="btn btn-primary" href="humdinger.html">View Project
               <span class="glyphicon glyphicon-chevron-right"></span>
           </a>
