Updated the about.html file bio description

--- a/about.html
+++ b/about.html
@@ -89,9 +89,11 @@
         </div>
         <div class="col-lg-6">
           <h2>Hi. I'm Alexia Bernardo.</h2>
-          <p>I attended my first anime convention, Tora-Con. Not as a casual attendee - I decided to join the staff running the convention despite never attending one before.</p>
-          <p>While I was at the staff meetings, I wondered how I’d be able to contribute anything. But despite the interesting email requests, angry attendees, and the occasional use of a first aid kit, I kept going on as a staff member. I never thought I’d get that much interaction with attendees, but I’d enjoy the experience.</p>
-          <p>I’m well-versed in communication, planning and development, and team leadership. If you’re interested in how I was the project manager of seven different projects in my third semester in college, please send an email my way.</p>
+          <p> I’m a designer fueled by compassion, curiosity, and interest for interactive design. I’m currently a student at the Rochester Institute of Technology where I major in Game Design and Development Program that focus on the process of producing interactive experiences through games.</p>
+          <p>I enjoy being the bridge that brings artists and programmers together to ensure that art assets can be easily integrated into a game without sacrificing either the overall artistic vision or exceeding the technical limits of the chosen platform.</p>
+          <p>I’m passionate for innovative software that is a work of art. In my spare time you can find me playing retro games, going to hackathons, or attending local conventions.</p>
+          <p>I’m currently working on developing a game in Unity 3D called The Libyrinth where the player finds themselves waking up in their local library after it had been destroyed in a fire. A library that is being haunted by the ghosts of the former librarians.</p>
+          <h2>Reach me at <a href="mailto:me@alexiabernardo.com">me@alexiabernardo.com</a></h2>
         </div>
       </div>
       <!-- /.row -->
@@ -144,6 +146,16 @@
       </div>
         
         <hr>
+
+        <!-- Call to Action Section -->
+      <div class="row mb-4">
+        <div class="col-md-8">
+          <p>I'm interested in a full time position in design and development of interactive software products.</p>
+        </div> 
+        <div class="col-md-4">
+          <a class="btn btn-lg btn-secondary btn-block" href="media/AlexiaBernardoResume.pdf">Download Resume</a>
+        </div>
+      </div>
 
     </div>
     <!-- /.container -->
