--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       <!-- Call to Action Section -->
       <div class="row mb-4">
         <div class="col-md-8">
-          <p>I'm interested in a full time position in the design and development of software products. Available June 2019</p>
+          <p>I'm interested in a full time position in design and development of interactive software products.</p>
         </div> 
         <div class="col-md-4">
           <a class="btn btn-lg btn-secondary btn-block" href="media/AlexiaBernardoResume.pdf">Download Resume</a>
