Added links to the game demo

--- a/thelibyrinth.html
+++ b/thelibyrinth.html
@@ -81,6 +81,8 @@
         <small>Oct 2017</small>
              <a class="btn btn-primary" href="http://thelibyrinth.me/">View Project
             <span class="glyphicon glyphicon-chevron-right"></span></a>
+            <a class="btn btn-primary" href="https://www.youtube.com/watch?v=e5NQ7izJcRU ">Video Demo
+              <span class="glyphicon glyphicon-chevron-right"></span></a>
         </h1>
         
          <hr>
