--- a/firefightingfoxfinders.html
+++ b/firefightingfoxfinders.html
@@ -81,6 +81,8 @@
         <small>Oct 2017</small>
             <a class="btn btn-primary" href="https://github.com/sel6606/HeroJam_Fall2017">View Project
             <span class="glyphicon glyphicon-chevron-right"></span></a>
+            <a class="btn btn-primary" href="https://www.youtube.com/watch?time_continue=1&v=8bXgioN3e-o">Video Demo
+              <span class="glyphicon glyphicon-chevron-right"></span></a>
       </h1>
         
          <hr>
