Replaced nav bar name with logo, removed the na dropdown for projects.

--- a/llamainajar.html
+++ b/llamainajar.html
@@ -38,7 +38,7 @@
     <!-- Navigation -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Alexia Bernardo</a>
+        <a href = "index.html"><img id = "logo" src="media/logo.png" class="img-fluid" alt="Responsive image"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -47,16 +47,9 @@
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
               </li>
-                <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Portfolio
-              </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                <a class="dropdown-item" href="portfolio-digital.html">Digital Games</a>
-                <a class="dropdown-item" href="portfolio-tabletop.html">Tabletop Games</a>
-                <a class="dropdown-item" href="portfolio-americangreetings.html">AG Internship</a>
-              </div>
-            </li>
+              <li class="nav-item">
+                <a class="nav-link" href="portfolio-digital.html">Portfolio</a>
+                </li>
                  <li>
                <a href= "https://github.com/abernardo97" class="btn btn-social-icon btn-github">
                   <span class="fa fa-github"></span>
@@ -122,7 +115,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; 2018</p>
+        <p class="m-0 text-center text-white">&copy; 2018 Alexia Bernardo</p>
       </div>
       <!-- /.container -->
     </footer>
