updated the index file as well

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="title" content="Alexia Bernardo Personal Portfolio">
-    <meta name="description" content="Hi, I'm Alexia Bernardo and I'm a game designer and developer. I enjoy working on multidisciplinary projects.">
-    <meta name="keywords" content="game design, game development, game programming, software development, gameplay programming, level design, project management, casual games">
+    <meta name="description" content="Hi. I'm Alexia Bernardo. I’m a designer fueled by compassion, curiosity, and interest for interactive design.">
+    <meta name="keywords" content="game design, interactive software design, game development, software development, 3D modeling, digital art">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
     <meta name="revisit-after" content="3 days">
