updated the libyrinth on the website

--- a/hiddenobjectgame.html
+++ b/hiddenobjectgame.html
@@ -71,7 +71,7 @@
 
       <!-- Page Heading/Breadcrumbs -->
       <h1 class="mt-4 mb-3">Enchanted Courtyard Hidden Object Game
-        <small>Jan 2018</small>
+        <small>Jan 2018 - April 2018</small>
              <a class="btn btn-primary" href="https://www.bluemountain.com/ecards/birthday/enchanted-courtyard-hidden-objects-game/card-3468356">View Project
             <span class="glyphicon glyphicon-chevron-right"></span></a>
         </h1>
