--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </ol>
         <div class="carousel-inner" role="listbox">
           <!-- Slide One - Set the background image for this slide in the line below -->
-          <div class="carousel-item active" style="background-image: url(media/LibyrinthGiantImage.png)">
+          <div class="carousel-item active" style="background-image: url(media/libyrinth/image13.png)">
             <div class="carousel-caption d-none d-md-block">
               <h3>The Libyrinth</h3>
               <p>The Libyrinth is a 3D stealth maze game that was developed in Unity in C#.</p>
@@ -116,7 +116,7 @@
       <div class="row">
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="thelibyrinth.html"><img class="card-img-top" src="media/LibyrinthMiniImage.png" alt="The Libyrinth"></a>
+            <a href="thelibyrinth.html"><img class="card-img-top" src="media/libyrinth/image13.png" alt="The Libyrinth"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="thelibyrinth.html">The Libyrinth</a>
