--- a/llamainajar.html
+++ b/llamainajar.html
@@ -71,7 +71,7 @@
 
       <!-- Page Heading/Breadcrumbs -->
       <h1 class="mt-4 mb-3">Llama in a Jar Interactive eCard
-        <small>Jan 2018</small>
+        <small>Jan 2018 - April 2018</small>
         </h1>
         
          <hr>
