--- a/portfolio-digital.html
+++ b/portfolio-digital.html
@@ -80,7 +80,7 @@
       <div class="row">
         <div class="col-md-7">
           <a href="thelibyrinth.html">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="media/TheLibyrinthImage.png" alt="The Libyrinth Image">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="media/libyrinth/image13.png" alt="The Libyrinth Image">
           </a>
         </div>
         <div class="col-md-5">
