--- a/index.html
+++ b/index.html
@@ -43,11 +43,6 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-              <li class="nav-item">
-                <a class="nav-link" href="portfolio-digital.html">Portfolio</a>
-                </li>
             <li>
                <a href= "https://github.com/abernardo97" class="btn btn-social-icon btn-github">
                   <span class="fa fa-github"></span>
@@ -63,55 +58,13 @@
       </div>
     </nav>
     <!-- Navigation end-->
-      
-    <header>
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner" role="listbox">
-          <!-- Slide One - Set the background image for this slide in the line below -->
-          <div class="carousel-item active" style="background-image: url(media/libyrinth/image13.png)">
-            <div class="carousel-caption d-none d-md-block">
-              <h3>The Libyrinth</h3>
-              <p>The Libyrinth is a 3D stealth maze game that was developed in Unity in C#.</p>
-            </div>
-          </div>
-          <!-- Slide Two - Set the background image for this slide in the line below -->
-          <div class="carousel-item" style="background-image: url(media/FFFGiantImage.png)">
-            <div class="carousel-caption d-none d-md-block">
-              <h3>Firefighting Fox Finders</h3>
-              <p>Firefighting Fox Finders is a first person game that was developed in Unity in C#.</p>
-            </div>
-          </div>
-          <!-- Slide Three - Set the background image for this slide in the line below -->
-          <div class="carousel-item" style="background-image: url(media/HelloWorldMain.png)">
-            <div class="carousel-caption d-none d-md-block">
-              <h3>Hello, World</h3>
-              <p>Hello, World is an open source game focused on teaching some basics of object oriented code.</p>
-            </div>
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-    </header>
 
     <!-- Page Content -->
     <div class="container">
 
-      <hr>
-
       <!-- Portfolio Section -->
-      <h2>Featured Projects</h2>
+      <h1 class="mt-4 mb-3">Featured Projects
+        </h1>
 
       <div class="row">
         <div class="col-lg-4 col-sm-6 portfolio-item">
@@ -150,15 +103,59 @@
       </div>
       <!-- /.row -->
 
+      <div class="row">
+          <div class="col-lg-4 col-sm-6 portfolio-item">
+            <div class="card h-100">
+              <a href="hiddenobjectgame2.html"><img class="card-img-top" src="media/HogsImage2.png" alt="Hidden Object Game"></a>
+              <div class="card-body">
+                <h4 class="card-title">
+                  <a href="hiddenobjectgame2.html">Birthday Enchantment Hidden Objects Game</a>
+                </h4>
+                <p class="card-text">Search and collect all the hidden objects to reveal your special message. </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6 portfolio-item">
+            <div class="card h-100">
+              <a href="hiddenobjectgame.html"><img class="card-img-top" src="media/HogsImage.png" alt="Hidden Object Game"></a>
+              <div class="card-body">
+                <h4 class="card-title">
+                  <a href="hiddenobjectgame.html">Enchanted Courtyard Hidden Object Game</a>
+                </h4>
+                <p class="card-text">Search and collect all the hidden objects to reveal your special message.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6 portfolio-item">
+            <div class="card h-100">
+              <a href="llamainajar.html"><img class="card-img-top" src="media/LlamaJarImage.png" alt="Llama in a Jar Interactive eCard"></a>
+              <div class="card-body">
+                <h4 class="card-title">
+                  <a href="llamainajar.html">Llama in a Jar Interactive eCard</a>
+                </h4>
+                <p class="card-text">An interactive scene where the player can admire a llama from afar.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- /.row -->
+
       <hr>
 
       <!-- Call to Action Section -->
       <div class="row mb-4">
         <div class="col-md-8">
-          <p>I'm interested in a full time position in design and development of interactive software products.</p>
+            <h2 class="mt-4 mb-3">About
+                <small>Alexia Bernardo</small>
+              </h2>
+          <p> Hi. I’m a designer with a curiosity and interest for interactive design. I’m currently a Game Design and Development student at the Rochester Institute of Technology to produce interactive experiences through games.</p>
+          <p>I enjoy being the bridge that brings artists and programmers together to ensure that art assets can be easily integrated into a game without sacrificing either the overall artistic vision or exceeding the technical limits of the chosen platform.</p>
+          <a class="btn btn-lg btn-secondary btn-block" href="media/AlexiaBernardoResume.pdf">Download Resume</a>
         </div> 
         <div class="col-md-4">
-          <a class="btn btn-lg btn-secondary btn-block" href="media/AlexiaBernardoResume.pdf">Download Resume</a>
+            <img class="img-fluid rounded mb-4" src="media/Me.png" alt="Picture of Me">
+            <p class="m-0 text-center">Wallkill, NY</p>
+            <p class="m-0 text-center"><a href="mailto:me@alexiabernardo.com">me@alexiabernardo.com</a></p>
         </div>
       </div>
 
@@ -168,7 +165,14 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">&copy; 2018 Alexia Bernardo</p>      
+        <p class="m-0 text-center text-white">&copy; 2018 Alexia Bernardo. Framework from <a href="https://getbootstrap.com/">Bootstrap</a>. All Rights Reserved.</p>         
+        
+        <p class="m-0 text-center text-white"><a href= "https://github.com/abernardo97" class="btn btn-social-icon btn-github">
+               <span class="fa fa-github"></span>
+             </a>
+             <a href="https://www.linkedin.com/in/alexiabernardo/" class="btn btn-social-icon btn-linkedin">
+               <span class="fa fa-linkedin"></span>
+             </a></p>   
       </div>
       <!-- /.container -->
     </footer>
