--- a/llamainajar.html
+++ b/llamainajar.html
@@ -44,12 +44,6 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="portfolio-digital.html">Portfolio</a>
-                </li>
                  <li>
                <a href= "https://github.com/abernardo97" class="btn btn-social-icon btn-github">
                   <span class="fa fa-github"></span>
@@ -112,13 +106,20 @@
     </div>
     <!-- /.container -->
 
-    <!-- Footer -->
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">&copy; 2018 Alexia Bernardo</p>
-      </div>
-      <!-- /.container -->
-    </footer>
+     <!-- Footer -->
+     <footer class="py-5 bg-dark">
+        <div class="container">
+          <p class="m-0 text-center text-white">&copy; 2018 Alexia Bernardo. Framework from <a href="https://getbootstrap.com/">Bootstrap</a>. All Rights Reserved.</p>         
+          
+          <p class="m-0 text-center text-white"><a href= "https://github.com/abernardo97" class="btn btn-social-icon btn-github">
+                 <span class="fa fa-github"></span>
+               </a>
+               <a href="https://www.linkedin.com/in/alexiabernardo/" class="btn btn-social-icon btn-linkedin">
+                 <span class="fa fa-linkedin"></span>
+               </a></p>   
+        </div>
+        <!-- /.container -->
+      </footer>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
